# fcitx5-beast

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
po/: CMakeLists.txt  zh_CN.po  zh_TW.po
scripts/: translate.sh
src/: CMakeLists.txt  beast.conf.in.in  beast.cpp  beast.h
test/: testbeast.cpp
